correct the alignment of accordion.

--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@
  .slag .ques .ques-content {
     display: flex;
     flex-direction: column;
+    height: fit-content;
  }
 
  .slag .ques .ques-content .question {
@@ -259,7 +260,6 @@
  }
 
  .slag .ques .ques-content .ans {
-    padding-top: 15px;
     height: 0px;
     overflow: hidden;
     width: 100%;
@@ -270,6 +270,7 @@
 
  .slag .ques .ques-content.active .ans {
     height: 150px;
+    padding-top: 15px;
  }
 
 
